@@ -9,6 +9,7 @@ o -obj JSON output
 can follow a chain from each found dictionary entry
 * More of the PDF/UA Matterhorn verification suite implemented
 * Font lister now returns the font itself
+o Allow %objnum in output name for -extract-images
 
 Fixes:
 
